# emass-mock

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/python-pytest/: README.md  conftest.py  docker-compose.yml  test_emass_integration.py
src/emass_mock/: __init__.py  __main__.py  auth.py  config.py  envelope.py  failures.py  main.py  middleware.py  proxy.py  store.py
src/emass_mock/handlers/: artifacts.py  controls.py  hardware_baseline.py  poams.py  software_baseline.py  systems.py  test_results.py
src/emass_mock/routers/: admin.py  artifacts.py  controls.py  poams.py  systems.py  test_results.py  ui.py
src/emass_mock/templates/: base.html  index.html  system.html
tests/: conftest.py  test_artifacts_multipart.py  test_auth.py  test_auth_headers.py  test_controls.py  test_envelope_shape.py  test_failure_injection.py  test_other_endpoints.py  test_prism_fallthrough.py  test_round_trip.py  test_systems.py  test_ui.py  test_validation.py
